fix(Home Styles): home hero waves svg not covering sliver of accent color causing line

--- a/src/components/Pages/Home/Hero/Hero.module.scss
+++ b/src/components/Pages/Home/Hero/Hero.module.scss
@@ -79,7 +79,7 @@
 
     svg {
       width: 100%;
-      height: 110px;
+      height: 112px;
       display: block;
     }
   }
